# crazydog

./: .gitignore  README.md
crazydog_ws/src/lqr_control/lqr_control/: LQR_pin.py  advlqr_dynamic_k.py  advlqr_fix_k.py  advlqr_v1.0.py  lqr_v1.0.1.py  lqr_v1.0.2.py  lqr_v1.0.3.py  lqr_v1.1.0.py  lqr_v1.2.1.py  lqr_v1.3.0.py  lqr_v1.3.1.py  lqr_v1.4.0.py  lqr_v1.4.1.py  lqr_v2.2.0.py  lqr_v2.2.1.py  lqr_v3.0.0.py  lqr_v3.1.0.py  lqr_v4.0.0.py
crazydog_ws/src/lqr_control/lqr_control/utils/: LQR_pin.py  ros_manager.py  urdf_loader.py
crazydog_ws/src/mpc_control/mpc_control/: MPC_pin_v2.py  mpc_osqp_morris.py  mpc_test.py  mpc_v1.0.3.py  mpc_v3.0.0.py
crazydog_ws/src/mpc_control/mpc_control/utils/: LQR_pin.py  biped_robot_dynamics.py  ros_manager.py
crazydog_ws/src/rl_control/: package.xml  setup.py
crazydog_ws/src/rl_control/rl_control/: rl_v1.0.0.py  rl_v1.1.0.py  rl_v1.1.1.py
crazydog_ws/src/rl_control/rl_control/model/2024-12-10_22-19-38/: model_19000.pt
crazydog_ws/src/rl_control/rl_control/model/2024-12-11_13-43-25/: model_2600.pt
crazydog_ws/src/rl_control/rl_control/model/2024-12-12_15-12-32/: model_2950.pt
crazydog_ws/src/rl_control/rl_control/utils/: ros_manager.py
crazydog_ws/src/robot_interfaces/: setup.py
crazydog_ws/src/robot_interfaces/config/: robotv1.yaml  robotv2.yaml
crazydog_ws/src/robot_interfaces/launch/: robot_interface.launch.py  robotv1_interface.launch.py  robotv2_interface.launch.py
crazydog_ws/src/robot_interfaces/robot_interfaces/: foc_command_sub.py  foc_data_pub.py  foc_test_pub.py  jointstate_pub.py  joy_controller.py  odom_pub.py  unitree_l.py  unitree_left_pub.py  unitree_pubsub.py  unitree_pubsub_test.py  unitree_r.py  unitree_right_pub.py  unitree_utills.py
crazydog_ws/src/unitree_interfaces/: CMakeLists.txt  package.xml
crazydog_ws/src/unitree_interfaces/src/: test.cpp  unitree_pubsub.cpp
crazydog_ws/src/unitree_msgs/msg/: MotorState.msg
(+85 files in other folders)
